samples/_failures_safe/1761340897_1dd199_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb251dd9.c: In function ‘main’:
./samples/SAFE/__tmp_fb251dd9.c:153:12: error: missing terminating " character
  153 |     printf("\
      |            ^~
./samples/SAFE/__tmp_fb251dd9.c:153:5: error: expected expression at end of input
  153 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_fb251dd9.c:153:5: error: expected declaration or statement at end of input
